[gd_scene load_steps=2 format=3 uid="uid://cyycjy4kkjy7a"]

[ext_resource type="Script" path="res://Scripts/Editor/EditorStatusBar.gd" id="1_p6qs8"]

[node name="EditorStatusBar" type="HBoxContainer"]
offset_top = 560.0
offset_right = 800.0
offset_bottom = 580.0
script = ExtResource("1_p6qs8")

[node name="TimeDisplay" type="Label" parent="."]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Time: 00:00.00"
vertical_alignment = 1

[node name="VSeparator1" type="VSeparator" parent="."]
layout_mode = 2

[node name="BPMDisplay" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "BPM: 120.00"
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2

[node name="SnapDisplay" type="Label" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Snap: 1/16"
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="."]
layout_mode = 2

[node name="NotesDisplay" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Notes: 0"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ModifiedIndicator" type="Label" parent="."]
layout_mode = 2
text = "[Saved]"
vertical_alignment = 1
